Fixed mobile menu on mobile landscape orientation

--- a/style/css/index.css
+++ b/style/css/index.css
@@ -168,6 +168,7 @@ p {
   position: fixed;
   top: 0;
   right: 0;
+  overflow-y: scroll;
   background: #fff;
   color: #3d4853;
   -webkit-transition: all 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
